# 0ad_build_orders

./: CMakeLists.txt  README.md
.github/workflows/: check_build.yaml
include/: helper.h
slinger_rush/: commands.txt  metadata.json
src/: helper.cpp  main.cpp
